Manage Spots layout adjust, whitespace nowrap added to prevent city,state from going onto next line

--- a/frontend/src/components/AllSpots/AllSpots.css
+++ b/frontend/src/components/AllSpots/AllSpots.css
@@ -14,6 +14,14 @@
   text-decoration: none;
 } */
 
+.spot-update-and-delete-container{
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+  flex-grow: 1;
+}
+
 .spot-list {
   grid-gap: 15px;
   display: grid;
@@ -71,6 +79,7 @@
   font-weight: bold;
   color: #000000;
   text-decoration: none !important;
+  white-space: nowrap;
 }
 
 .meta.price {
@@ -107,7 +116,23 @@
   margin-right: 5px;
 }
 
+.spot-update-and-delete-container button {
+  background-color: #ff5a5f;
+  border: 1px solid #000;
+  color: #fffbff;
+  cursor: pointer;
+  font-weight: 600;
+  margin-top: 10px;
+  padding: 5px;
+  text-decoration: none !important;
+}
+
 /* .h1 {
   text-align: center;
   justify-content: center;
 } */
+
+.update-spot-navlink{
+  text-decoration: none !important;
+  color: inherit;
+}
