--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -11,6 +11,7 @@
   font-weight: 800;
   width: 10rem;
   padding: 8px;
+  cursor: pointer;
 }
 
 .nav-menu {
